Fixed: System crash on Eden when adding XBMC account.

--- a/res/xml/syncadapter.xml
+++ b/res/xml/syncadapter.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
 /*
  *      Copyright (C) 2005-2015 Team XBMC
  *      http://xbmc.org
@@ -18,34 +20,13 @@
  *  http://www.gnu.org/copyleft/gpl.html
  *
  */
+-->
 
-package org.xbmc.android.account;
+<!-- The attributes in this XML file provide configuration information -->
+<!-- for the SyncAdapter. -->
 
-/**
- * Account-related constants.
- * 
- * This will probably move somewhere else more central eventually.
- * 
- * @author freezy <freezy@xbmc.org>
- */
-public class Constants {
-
-	/**
-	 * Minumal API level of XBMC's JSON-RPC API.
-	 */
-	public static final int MIN_JSONRPC_API = 3;
-	
-	/**
-	 * Account type string.
-	 */
-	public static final String ACCOUNT_TYPE = "org.xbmc.android.remote";
-
-	/**
-	 * Authtoken type string.
-	 */
-	public static final String AUTHTOKEN_TYPE = "org.xbmc.android.remote";
-	
-	public static final String DATA_ADDRESS = "org.xbmc.android.account.ADDRESS";
-	public static final String DATA_PORT = "org.xbmc.android.account.PORT";
-
-}
+<sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
+    android:contentAuthority="org.xbmc.android.jsonrp"
+    android:accountType="org.xbmc.android.remote"
+    android:supportsUploading="false"
+/>
