--- a/res/xml/contacts.xml
+++ b/res/xml/contacts.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
 /*
  *      Copyright (C) 2005-2015 Team XBMC
  *      http://xbmc.org
@@ -18,34 +20,15 @@
  *  http://www.gnu.org/copyleft/gpl.html
  *
  */
+-->
 
-package org.xbmc.android.account;
+<ContactsSource xmlns:android="http://schemas.android.com/apk/res/android">
 
-/**
- * Account-related constants.
- * 
- * This will probably move somewhere else more central eventually.
- * 
- * @author freezy <freezy@xbmc.org>
- */
-public class Constants {
+    <ContactsDataKind
+        android:mimeType="vnd.android.cursor.item/vnd.samplesyncadapter.profile"
+        android:icon="@drawable/icon"
+        android:summaryColumn="data2"
+        android:detailColumn="data3"
+        android:detailSocialSummary="true" />
 
-	/**
-	 * Minumal API level of XBMC's JSON-RPC API.
-	 */
-	public static final int MIN_JSONRPC_API = 3;
-	
-	/**
-	 * Account type string.
-	 */
-	public static final String ACCOUNT_TYPE = "org.xbmc.android.remote";
-
-	/**
-	 * Authtoken type string.
-	 */
-	public static final String AUTHTOKEN_TYPE = "org.xbmc.android.remote";
-	
-	public static final String DATA_ADDRESS = "org.xbmc.android.account.ADDRESS";
-	public static final String DATA_PORT = "org.xbmc.android.account.PORT";
-
-}
+</ContactsSource>
