--- a/res/xml/authenticator.xml
+++ b/res/xml/authenticator.xml
@@ -30,4 +30,5 @@
     android:icon="@drawable/icon"
     android:smallIcon="@drawable/icon"
     android:label="@string/addaccount_authenticator_label"
+    android:accountPreferences="@xml/account_preferences"
 />
