--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -1,29 +1,37 @@
 <!--
-  Copyright 2011 Google Inc.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
+	    Copyright (C) 2005-2015 Team XBMC
+	    http://xbmc.org
+	
+	This Program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 2, or (at your option)
+	any later version.
+	
+	This Program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+	GNU General Public License for more details.
+	
+	You should have received a copy of the GNU General Public License
+	along with XBMC Remote; see the file license.  If not, write to
+	the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
+	http://www.gnu.org/copyleft/gpl.html
 -->
 
 <resources>
 
     <!-- Start with the Holographic Light theme -->
     <style name="Theme.XBMCRemote" parent="android:style/Theme.Holo.Light">
-        <item name="android:windowBackground">@drawable/bg_gradient_dark_horizontal</item>
+        <!-- new actionbar attributes -->
         <item name="android:actionBarStyle">@style/ActionBar</item>
+        <item name="android:windowContentOverlay">@drawable/actionbar_shadow</item>
+
+        <item name="android:windowBackground">@drawable/bg_gradient_dark_horizontal</item>
 
         <!-- custom attributes -->
         <item name="textHeaderMaxLines">@integer/text_header_max_lines</item>
         <item name="trackAbstractMaxLines">@integer/track_abstract_max_lines</item>
+        
     </style>
 
     <style name="Theme.XBMCRemote.Home" parent="style/Theme.XBMCRemote">
@@ -34,14 +42,15 @@
     <style name="ActionBar" parent="android:style/Widget.Holo.Light.ActionBar">
         <item name="android:textColor">@color/actionbar_text</item>
         <item name="android:background">@drawable/bg_gradient_dark_horizontal</item>
-        <item name="android:titleTextStyle">@style/ActionBarText</item>
+        <item name="android:titleTextStyle">@style/ActionBarTitle</item>
+        <item name="android:icon">@drawable/ic_home</item>
     </style>
     
     <style name="ActionBarHome" parent="style/ActionBar">
         <item name="android:logo">@drawable/actionbar_compat_logo</item>
     </style>
     
-    <style name="ActionBarText" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+    <style name="ActionBarTitle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/actionbar_text</item>
