--- a/res/values-v13/styles.xml
+++ b/res/values-v13/styles.xml
@@ -19,6 +19,9 @@
   -->
 
 <resources>
-    <integer name="text_header_max_lines">3</integer>
-    <integer name="track_abstract_max_lines">2</integer>
+
+    <style name="ActionBarTitle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/actionbar_title_color</item>
+    </style>
+
 </resources>
