--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -27,11 +27,6 @@
         <item name="android:windowContentOverlay">@drawable/actionbar_shadow</item>
 
         <item name="android:windowBackground">@drawable/bg_gradient_dark_horizontal</item>
-
-        <!-- custom attributes -->
-        <item name="textHeaderMaxLines">@integer/text_header_max_lines</item>
-        <item name="trackAbstractMaxLines">@integer/track_abstract_max_lines</item>
-        
     </style>
 
     <style name="Theme.XBMCRemote.Home" parent="style/Theme.XBMCRemote">
@@ -40,7 +35,7 @@
     </style>
 
     <style name="ActionBar" parent="android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:textColor">@color/actionbar_text</item>
+        <item name="android:textColor">@color/actionbar_title_color</item>
         <item name="android:background">@drawable/bg_gradient_dark_horizontal</item>
         <item name="android:titleTextStyle">@style/ActionBarTitle</item>
         <item name="android:icon">@drawable/ic_home</item>
@@ -53,7 +48,7 @@
     <style name="ActionBarTitle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/actionbar_text</item>
+        <item name="android:textColor">@color/actionbar_title_color</item>
         <item name="android:shadowColor">@color/actionbar_shadow</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">1</item>
