--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,8 +19,7 @@
   -->
 <resources>
 	
-    <color name="actionbar_title_color">#224894</color>
-    <color name="actionbar_text">#e2e2e2</color>
+    <color name="actionbar_title_color">#e2e2e2</color>
     <color name="actionbar_shadow">#000</color>
 
     <color name="body_text_1">#ff000000</color>
