--- a/res/layout/dashboard_box.xml
+++ b/res/layout/dashboard_box.xml
@@ -2,21 +2,21 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
      <RelativeLayout  
          android:id="@+id/dashboardbox_titlebar"
-         style="@style/DashboxTitle">
+         style="@style/DashboardBoxTitle">
 
          <ImageView
              android:id="@+id/dashboardbox_icon"
-             style="@style/DashboxImage"
+             style="@style/DashboardBoxImage"
              android:layout_alignParentLeft="true"
              android:src="@drawable/ic_dashboard_movies" />
 
          <TextView
              android:id="@+id/dashboardbox_title"
-             style="@style/DashboxTitleText"
+             style="@style/DashboardBoxTitleText"
              android:layout_toRightOf="@id/dashboardbox_icon" />
 
          <ImageView
-             style="@style/DashboxImage"
+             style="@style/DashboardBoxImage"
              android:layout_alignParentRight="true"
              android:src="@drawable/ic_dashboard_more" />
      </RelativeLayout>
