--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -52,8 +52,8 @@
 
     <!-- tablet stuff -->
     <dimen name="tablet_padding_home">25dp</dimen>
-    <dimen name="dashbox_title">45dp</dimen>
-    <dimen name="dashbox_title_text">32dp</dimen>
-    <dimen name="dashbox_padding">10dp</dimen>
+    <dimen name="dashboardbox_title">45dp</dimen>
+    <dimen name="dashboardbox_title_text">32dp</dimen>
+    <dimen name="dashboardbox_padding">10dp</dimen>
 
 </resources>
