--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -15,12 +15,12 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_refresh"
+    <item android:id="@id/menu_refresh"
         android:title="@string/menu_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:orderInCategory="1"
         android:showAsAction="always" />
-    <item android:id="@+id/menu_search"
+    <item android:id="@id/menu_search"
         android:title="@string/menu_search"
         android:icon="@drawable/ic_action_search"
         android:orderInCategory="0"
