--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -19,29 +19,12 @@
   -->
 <resources>
 	
-    <!-- new -->
     <item type="id" name="actionbar_compat" />
     <item type="id" name="actionbar_compat_title" />
     <item type="id" name="actionbar_compat_item_refresh_progress" />
     <item type="id" name="actionbar_compat_item_refresh" />
-    <item type="id" name="menu_refresh" />
     
-    <!-- old -->
-    <item type="id" name="actionbar_compat_container" />
-    <item type="id" name="actionbar_compat_logo" />
-    <item type="id" name="actionbar_compat_text" />
-
-    <item type="id" name="fragment_sessions" />
-    <item type="id" name="fragment_session_detail" />
-    <item type="id" name="fragment_vendors" />
-    <item type="id" name="fragment_vendor_detail" />
-
-    <item type="id" name="menu_refresh_progress" />
-
-    <item type="id" name="dialog_discard_confirm" />
-
-    <item type="id" name="dialog_moderator" />
-
-    <item type="id" name="blocks_ruler" />
-    <item type="id" name="blocks_now" />
+    <item type="id" name="menu_refresh" />
+    <item type="id" name="menu_search" />
+    
 </resources>
