--- a/res/layout-large-land-v11/activity_home.xml
+++ b/res/layout-large-land-v11/activity_home.xml
@@ -3,7 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+    <Button
+	    android:id="@+id/home_testbtn"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="test shit" />
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -16,5 +20,6 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
     </LinearLayout>
+
 
 </LinearLayout>
