--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -17,12 +17,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@id/menu_refresh"
         android:title="@string/menu_refresh"
-        android:icon="@drawable/ic_action_refresh"
+        android:icon="@drawable/menu_ic_refresh"
         android:orderInCategory="1"
         android:showAsAction="always" />
     <item android:id="@id/menu_search"
         android:title="@string/menu_search"
-        android:icon="@drawable/ic_action_search"
+        android:icon="@drawable/menu_ic_search"
         android:orderInCategory="0"
         android:showAsAction="always" />
 </menu>
