Everything's compiling now and SlidingMenu extends ActionBarSherlock.

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,17 +1,17 @@
 <!--
 	    Copyright (C) 2005-2015 Team XBMC
 	    http://xbmc.org
-	
+
 	This Program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
 	the Free Software Foundation; either version 2, or (at your option)
 	any later version.
-	
+
 	This Program is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 	GNU General Public License for more details.
-	
+
 	You should have received a copy of the GNU General Public License
 	along with XBMC Remote; see the file license.  If not, write to
 	the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
@@ -34,7 +34,7 @@
     <declare-styleable name="TimeRulerView">
         <attr name="headerWidth" format="dimension" />
         <attr name="hourHeight" format="dimension" />
-        <attr name="horizontalDivider" format="boolean" />
+        <attr name="horizontalDivider2" format="boolean" />
         <attr name="labelTextSize" format="dimension" />
         <attr name="labelPaddingLeft" format="dimension" />
         <attr name="labelColor" format="color" />
@@ -47,10 +47,10 @@
         <attr name="maskDrawable" format="reference" />
         <attr name="borderDrawable" format="reference" />
     </declare-styleable>
-    
+
     <declare-styleable name="DashboardBoxLayout">
-        <attr name="icon" format="reference" />
-        <attr name="title" format="string" />
+        <attr name="icon2" format="reference" />
+        <attr name="title2" format="string" />
     </declare-styleable>
 
 </resources>
