--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -22,5 +22,6 @@
 	<!-- Sliding Menu -->
 	<dimen name="slidingmenu_shadow_width">15dp</dimen>
 	<dimen name="slidingmenu_offset">60dp</dimen>
+	<dimen name="slidingmenu_width">100dp</dimen>
 
 </resources>
