--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,5 +19,16 @@
   -->
 
 <resources>
+	<style name="Theme.XBMCRemote" parent="Theme.Sherlock.Light.DarkActionBar">
+		<item name="actionBarStyle">@style/Widget.XBMCRemote.ActionBar</item>
+		<item name="android:actionBarStyle">@style/Widget.XBMCRemote.ActionBar</item>
+	</style>
 
+	<style name="Widget.XBMCRemote.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
+		<item name="background">@color/dark_bg</item>
+		<item name="android:background">@color/dark_bg</item>
+
+		<item name="backgroundSplit">#ff0000</item>
+		<item name="android:backgroundSplit">#ff0000</item>
+	</style>
 </resources>
