--- a/res/layout/slidingmenu.xml
+++ b/res/layout/slidingmenu.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			 android:layout_width="fill_parent"
 			 android:layout_height="wrap_content"
-			 android:background="@android:color/white">
+			 android:background="@color/slidingmenu_bg">
 
 		<TextView android:id="@+id/item_title"
+				  android:textColor="@color/dark_secondary_text"
 				  android:text="Sliding Menu"
 				  android:layout_marginTop="12dp"
 				  android:layout_alignParentLeft="true"
