--- a/res/layout/slidingmenu.xml
+++ b/res/layout/slidingmenu.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			 android:layout_width="fill_parent"
-			 android:layout_height="wrap_content"
-			 android:background="@color/slidingmenu_bg">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent" >
 
-		<TextView android:id="@+id/item_title"
-				  android:textColor="@color/dark_secondary_text"
-				  android:text="Sliding Menu"
-				  android:layout_marginTop="12dp"
-				  android:layout_alignParentLeft="true"
-				  android:layout_width="fill_parent"
-				  android:layout_height="wrap_content" />
+	<ExpandableListView
+			android:id="@+id/slidingmenu_expandable_list"
+			android:layout_height="match_parent"
+			android:layout_width="match_parent"
+			android:groupIndicator="@null"/>
 
-</FrameLayout>
+</RelativeLayout>
